Finished implementation of all features. Some locations still are buggy, I have try except clauses that default to index 1 for those situations. I have cut the widget graphic animation as it is just too much work at this point. I am happy with the current state of things! It's been a fun 100+ hours (;

--- a/web/main.css
+++ b/web/main.css
@@ -1213,7 +1213,7 @@ body {
   left: 0px;
   top: 75px;
   font-size: 11px;
-  width: 50px;
+  width: 60px;
   text-align: left;
 }
 #dusk_value_sun {
@@ -1221,7 +1221,7 @@ body {
   left: 105px;
   top: 75px;
   font-size: 11px;
-  width: 50px;
+  width: 60px;
   text-align: right;
 }
 
